# light-blog

./: .gitmodules  AutoUptate.sh  OmegaOptions.bak  readme.md
ESP32/: Install.typ
Linux/: Linux 实用命令和技巧.md  disable-G304-wakeup.service  edge_search_engine.txt  linux 开发软件安装.md  linux 软件安装.md  linux 软件安装和配置.md  linux_backup.sh  linux_backup_7z.sh  manjaro 开发软件安装.md  manjaro 重装配置及注意事项.md  reboot-to-manjaro.sh  reboot-to-ubuntu.sh  reboot-to-windows.sh  ros2_rc  ubuntu 重装配置.md  v2raya_RoutingA.txt  video_convert.py  xyrc
Linux/KDE/: AwesomeWidget.html  KDE.md  KDE配置.md  Konsole_shortcuts(2).shortcuts  MyTitle.view.latte  TITH.layout.latte  flameshot.conf
Linux/archlinux_install/: archlinux_install.md  desktop-xy.json  mihomo-party-bin-1.8.4-1-x86_64.pkg.tar.zst  mirrorlist  pre_install.sh
Linux/config_files/: Konsole.shortcuts  Manjaro_Konsole.shortcuts  Manjaro_Yakuake.shortcuts  Yakuake.shortcuts  config-G102-wakeup.sh  config-G304-wakeup.sh  disable-G102-wakeup.service
Qt/: QML note.md
SSH/: SSH安装与启动.md  SSH用法.md  SSH笔记.md
STM32/: CubeMX.desktop  STM32.md  cubemx-ioc.xml  install-gcc-arm-none-eabi.sh
Typora/: Typora Note.md  conf.user.json
Ubuntu/: ubuntu 重装配置.md
cmake/: cmake_learning.md
cmake/template_cmake_cpp/: CMakeLists.txt  readme.md
cmake/template_cmake_cpp/include/: main.hpp
docker/: build_image.sh
git/: git小技巧.md  git笔记.md  子模块.md
iperf/: iperf3用法.md
iperf（网络测速）/: iperf3笔记.md
ros/: ros2_note.md  ros2_rc  ros_humble_rc
samba/: manjaro_smb.conf  samba使用教程.md  ubuntu_smb.conf
sparkle/: sparkle.md  覆写.yaml
vscode/: vscode 配置导出.md
自己写的脚本/: reboot-to-ubuntu.sh
(+132 files in other folders)
